# abi-demo

./: Cargo.toml  README.md  build.rs
abi-demo-impl/: Cargo.toml
abi-demo-impl/src/: lib.rs
abi-demo-lib/: Cargo.toml
abi-demo-lib/src/: lib.rs
src/: main.rs
