[workspace]
members = [
    "abi-demo-lib",
    "abi-demo-impl",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "abi-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
abi-demo-lib = { path = "abi-demo-lib" }
abi-demo-impl = { path = "abi-demo-impl" }
